# Smart_Road_Vision

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  setup.sh
.github/workflows/: ci.yml
configs/: app_config.yaml  model_config.yaml
dashboard/: app.py
dashboard/components/: metrics_cards.py  sidebar.py
dashboard/pages/: 1_live_detection.py  2_analytics.py  3_map_view.py  4_reports.py
data/datasets/: README.md
data/samples/: README.md
frontend/: app.js  index.html  styles.css
models/: README.md
notebooks/: 01_dataset_exploration.ipynb  02_model_benchmarking.ipynb  03_depth_severity_analysis.ipynb
scripts/: benchmark.py  download_models.py  run_demo.py
src/: __init__.py
src/analytics/: __init__.py  cost_estimator.py
src/api/: dependencies.py  main.py
src/api/routers/: analytics.py  detection.py  health.py  reports.py  stream.py
src/api/schemas/: __init__.py  detection.py  report.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/database/: __init__.py  crud.py  models.py
src/database/migrations/: init_db.sql
src/detection/: __init__.py  depth_estimator.py  detector.py  fallback_detector.py  postprocessor.py  preprocessor.py  segmentor.py  severity_scorer.py  types.py
src/pipeline/: __init__.py  batch_pipeline.py  image_pipeline.py  stream_pipeline.py  video_pipeline.py
src/reporting/: __init__.py  report_generator.py  statistics.py
src/reporting/templates/: report.html
src/storage/: __init__.py  detection_store.py
src/utils/: __init__.py  export.py  geo_utils.py  image_utils.py  visualizer.py
tests/: __init__.py  conftest.py
tests/integration/: test_analytics_api.py  test_api_detection.py  test_report_generation.py  test_video_pipeline.py
tests/unit/: test_config.py  test_cost_estimator.py  test_detection_store.py  test_detector.py  test_exceptions.py  test_export.py  test_fallback_detector.py  test_geo_utils.py  test_image_utils.py  test_postprocessor.py  test_preprocessor.py  test_severity_scorer.py  test_types.py  test_visualizer.py
training/: augmentation_config.yaml  dataset_prep.py  evaluate.py  train.py
