[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartroadvision"
version = "2.0.0"
description = "Intelligent Road Surface Anomaly Detection System (pothole, hump, crack detection)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SmartRoadVision Team" }]
keywords = ["computer-vision", "yolo", "pothole-detection", "road-safety", "fastapi"]

dependencies = [
    # --- Detection core ---
    "ultralytics>=8.3.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.10.0.84",
    "numpy>=1.26.0,<2.2.0",
    "pillow>=10.4.0",
    "piexif>=1.1.3",
    "albumentations>=2.0.0",
    "timm>=1.0.9",
    # --- Backend / API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "redis>=5.0.0",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.15.0",
    "celery>=5.4.0",
    "prometheus-client>=0.20.0",
    "aiofiles>=24.1.0",
    # --- Reporting ---
    "reportlab>=4.2.0",
    "jinja2>=3.1.4",
    "pandas>=2.2.0",
    # --- Config / logging ---
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.40.0",
    "streamlit-webrtc>=0.47.0",
    "plotly>=5.24.0",
    "folium>=0.17.0",
    "streamlit-folium>=0.22.0",
    "imageio>=2.35.0",
]
training = [
    "roboflow>=1.1.40",
    "wandb>=0.18.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.19.0",
]
tracking = [
    "boxmot>=11.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
smartroad-demo = "scripts.run_demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "scripts*", "training*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "dashboard", "scripts", "training", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC"]
ignore = ["E501", "B008", "N812"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
